chore(aiw): sync automation outputs 2026-07-19
Generated by Hermes AIW scheduled tasks.